@@ -1,9 +1,9 @@
 package com.example.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
+import javax.persistence.EntityNotFoundException;
 import javax.validation.Valid;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,22 +16,24 @@ import org.springframework.web.bind.annotation.PostMapping;
 
 import com.example.domain.TrainingDTO;
 import com.example.mapper.Mapper;
-import com.example.service.TrainingService;
+import com.example.repository.TrainingRepository;
 
 @Controller
 public class TrainingController {
 
+    private static final String REDIRECT_TO_HOMEPAGE = "redirect:/index";
+
     @Autowired
-    private TrainingService service;
+    private TrainingRepository repository;
 
     @Autowired
     private Mapper mapper;
 
     @GetMapping(value = { "/", "/index" })
     public String index(Model model) {
-	List<TrainingDTO> trainings = StreamSupport.stream(service.getAllTrainings().spliterator(), false)
+	List<TrainingDTO> trainings = StreamSupport.stream(repository.findAll().spliterator(), false)
 		.map(mapper::toDto)
-		.collect(Collectors.toList());
+		.toList();
 	model.addAttribute("trainings", trainings);
 	return "index";
     }
@@ -49,13 +51,13 @@ public class TrainingController {
 	    return "add";
 	}
 
-	service.saveTraining(mapper.toTraining(trainingDTO));
-	return "redirect:/index";
+	repository.save(mapper.toTraining(trainingDTO));
+	return REDIRECT_TO_HOMEPAGE;
     }
 
     @GetMapping("/edit/{id}")
     public String updateTrainingForm(@PathVariable("id") int id, Model model) {
-	TrainingDTO trainingdto = mapper.toDto(service.getTraining(id));
+	TrainingDTO trainingdto = mapper.toDto(repository.findById(id).orElseThrow(EntityNotFoundException::new));
 	model.addAttribute("trainingDTO", trainingdto);
 	return "edit";
     }
@@ -68,13 +70,13 @@ public class TrainingController {
 	    return "edit";
 	}
 
-	service.saveTraining(mapper.toTraining(trainingDTO));
-	return "redirect:/index";
+	repository.save(mapper.toTraining(trainingDTO));
+	return REDIRECT_TO_HOMEPAGE;
     }
 
     @GetMapping("/delete/{id}")
     public String deleteTraining(@PathVariable("id") int id, Model model) {
-	service.deleteTrainingById(id);
-	return "redirect:/index";
+	repository.deleteById(id);
+	return REDIRECT_TO_HOMEPAGE;
     }
 }
